Fixed active block header visibility bug

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -8,6 +8,9 @@
 .visible{
     visibility: visible;
 }
+.visible > div > h2{
+    visibility: visible;
+}
 .fullHeight{
     height:100%;
 }
@@ -48,6 +51,12 @@
     height:100%;
 }
 .transition{
+    transition: visibility 0.3s;
+    -webkit-transition: visibility 0.3s; /* Safari */
+    -webkit-transition-delay: 0.3s; /* Safari */
+    transition-delay: 0.3s;
+} 
+.transition>h2{
     transition: visibility 0.3s;
     -webkit-transition: visibility 0.3s; /* Safari */
     -webkit-transition-delay: 0.3s; /* Safari */
